--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "private": true,
+//  "private": true,
   "devDependencies": {
     "typescript": "^5.0.0",
     "@types/node": "^20.0.0"
